# PracticeEveryDay

AcitivityLifeCricleTest/app/: build.gradle
ActivityPractice/app/: build.gradle
ActiviytTest/app/: build.gradle
AndroidPrmoteFlighting/app/: build.gradle
AndroidThreadTest/app/: build.gradle
AppTest/app/: build.gradle
Application/app/: build.gradle
BroadcastBestPractice/app/: build.gradle
BroadcastTest/app/: build.gradle
BroadcastTest2/app/: build.gradle
CameraAlbumTest/app/: build.gradle
CameraWithOpenGL/app/: build.gradle
ContactsTest/app/: build.gradle
DataBaseTest/app/: build.gradle
EnterToUnity/: settings.gradle
EnterToUnity/app/: build.gradle
FFmpegLearn/app/: CMakeLists.txt  build.gradle
FilePersisitenceTese/app/: build.gradle
FragmentBestPractice/app/: build.gradle
FragmentTest/app/: build.gradle
FragmentTest2/app/: build.gradle
FrontChange/app/: build.gradle
HttpFrrame/app/: build.gradle
ImageSearch/app/: build.gradle
IntentPractice/app/: build.gradle
LBSTest/app/: build.gradle
LaunchLocalApp/app/: build.gradle
LearnComponent/: settings.gradle
LearnComponent/app/: build.gradle
LearnComponent/compoent1/: build.gradle
LearnComponent/componentbase/: build.gradle
LearnComponent/share/: build.gradle
LearnJHandler/app/: build.gradle
LearnJniAndNdk/app/: build.gradle
LearnKotlin/app/: build.gradle
LearnKotlin/学习笔记/: kotlin基础语法.docx  kotlin类与对象.docx  lambda表达式.docx  ~$tlin类与对象.docx
LearnOpenGL/app/: build.gradle
LearnRN/: build.gradle  ff.flowconfig  index.android.js  package-lock.json  package.json
LearnRN/app/: build.gradle
LearnRxJava/app/: build.gradle
LearnSurface/app/: build.gradle
MyApplication2/: build.gradle
NDKLearn/app/: CMakeLists.txt  build.gradle
NDKLearn/app/src/androidTest/java/com/example/asus1/ndklearn/: ExampleInstrumentedTest.java
NDKLearn/app/src/main/: AndroidManifest.xml
NDKLearn/app/src/main/cpp/: native-lib.cpp
NDKLearn/app/src/main/java/com/example/asus1/ndklearn/: Human.java  MainActivity.java  Man.java
NDKLearn/app/src/main/res/values/: strings.xml
NDKLearn/app/src/test/java/com/example/asus1/ndklearn/: ExampleUnitTest.java
RemoteService/: Blip3.out  Blips.out  worm.out
TestGilde/: build.gradle
TestUrlConnection/: settings.gradle
pushmessage/: .gitignore  AndroidManifest.xml  README
(+1275 files in other folders)
